<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_room"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/buttonCheck"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:onClick="retrieveRoomContextState"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

    <requestFocus />

    <RelativeLayout
        android:id="@+id/contextLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal"
            android:padding="25dip"
            android:layout_above="@+id/imageView1"
            android:layout_alignParentStart="true">

            <TableRow
                android:id="@+id/tableRowLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/light"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewLightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowNoise"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewNoise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/noiseLevel"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewNoiseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/linearLayoutButtons2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchLight"
                android:text="@string/lightonoff" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchRinger"
                android:text="@string/ringonoff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchMode"
                android:text="@string/modeonoff" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/waiting"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="13dp"
            android:layout_above="@+id/linearLayoutButtons"
            android:layout_toStartOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="67dp"
            android:src="@drawable/waiting"
            android:layout_alignTop="@+id/imageView1"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
